paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_005/target.compile.log
error[E0277]: `RefCell<[[i32; 9]; 9]>` cannot be shared between threads safely
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_005/target.rs:5:17
  |
5 | static BACKING: RefCell<[[i32; N]; N]> = RefCell::new([[0; N]; N]);
  |                 ^^^^^^^^^^^^^^^^^^^^^^ `RefCell<[[i32; 9]; 9]>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<[[i32; 9]; 9]>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
  = note: shared static variables must have a type that implements `Sync`

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_005/target.rs:6:14
  |
6 | static SINK: RefCell<i32> = RefCell::new(0);
  |              ^^^^^^^^^^^^ `RefCell<i32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<i32>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
  = note: shared static variables must have a type that implements `Sync`

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_4/sample_005/target.rs:42:14
   |
42 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.